feat: Added github option to personal info
Updated personal info to add github link.

Also added that link to the README section of personal info

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@ yarn-error.log
 /.vagrant
 .DS_Store
 
+
 # Project specific ignores
 CHANGELOG.md
 versions-main.log
+
+# SEO files (should be customized per deployment)
+desarrollo/public/robots.txt
